--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
     "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
     "mongoose": "^6.2.10",
     "next": "12.1.4",
+    "notistack": "^2.0.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "uuid": "^8.3.2"
